[print+ v4.3.0] Big upgrade to 'pList' and 'title' + bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ collection/original/head.txt
 collection/compacted/*.lua
 collection/original/*.limfile
 collection/original/makefile
+toFuture.txt
 wiki
 docs
