[coli2DA v4.0.2 | print+ v4.3.2 | Magic_Palette v2.1.1 | longBit v3.5.2] Bug fixes and tiny refatoration

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 collection/original/head.txt
 collection/compacted/*.lua
 collection/original/*.limfile
-collection/original/makefile
+collection/original/*.sh
 toFuture.txt
 wiki
 docs
