--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ collection/original/head.txt
 collection/compacted/*.lua
 collection/original/*.limfile
 collection/original/*.sh
+template-page-to-wiki.md 
 toFuture.txt
 wiki
 docs
